Cleaned up ActivityCompat logic for full-screen mode.

--- a/app/src/main/res/xml/preferences_defaults.xml
+++ b/app/src/main/res/xml/preferences_defaults.xml
@@ -9,7 +9,7 @@
 
     <!--suppress AndroidDomInspection -->
     <EditTextPreference
-        android:key="@string/pref_key_book_id"
+        android:key="@string/pref_key_current_book_id"
         android:defaultValue="@integer/default_book_id"/>
 
 </PreferenceScreen>
