--- a/app/src/main/res/layout/fragment_select_book.xml
+++ b/app/src/main/res/layout/fragment_select_book.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@android:id/background"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
