--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -25,6 +25,7 @@
             app:srcCompat="@drawable/space_bg"/>
 
         <FrameLayout
+            android:id="@+id/surface_view_frame"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -32,8 +33,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <!--
             <SurfaceView
                 android:id="@+id/surface_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            -->
+
+            <TextureView
+                android:id="@+id/texture_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
