--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -28,7 +28,8 @@
             android:id="@+id/texture_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            android:gravity="center_horizontal|bottom"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
