--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.loading.LoadingActivity">
+        tools:context=".presentation.loading.LoadingActivity">
 
         <fragment
             android:id="@+id/loading_nav_fragment"
