--- a/app/src/main/res/layout/listitem_book.xml
+++ b/app/src/main/res/layout/listitem_book.xml
@@ -5,46 +5,64 @@
   -->
 
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/listitem_book"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingBottom="@dimen/offset_xlarge"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
-    tools:background="@android:color/black">
+    android:background="@drawable/listitem_bg_light"
+    android:clickable="true"
+    android:focusable="true">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/title_txt"
-        style="@style/Base.TextAppearance.AppCompat.Large.Inverse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Igist"/>
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/preview_image"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/offset_standard"
+        android:layout_margin="@dimen/offset_large"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title_txt"
-        tools:src="@drawable/thumb_igist"/>
+        app:layout_constraintTop_toTopOf="parent">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/description_txt"
-        style="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/offset_standard"
-        android:gravity="center_horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/preview_image"
-        tools:text="In the not so distant future orbiting the Moon is the most prestigious science academy in the universe known as the Intergalactic Institute of Science and Technology (IGIST)."/>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/title_txt"
+            style="@style/Base.TextAppearance.AppCompat.Large.Inverse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Igist"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/description_txt"
+            style="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/offset_standard"
+            android:ellipsize="end"
+            android:gravity="center_horizontal"
+            android:lines="3"
+            android:maxLines="3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="In the not so distant future orbiting the Moon is the most prestigious science academy in the universe known as the Intergalactic Institute of Science and Technology (IGIST)."/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/preview_image"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/offset_large"
+            android:layout_marginBottom="@dimen/offset_large"
+            app:layout_constraintBottom_toTopOf="@id/description_txt"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/title_txt"
+            tools:src="@drawable/thumb_igist"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
