--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -48,20 +48,24 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/offset_large"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/square_guide"
-            app:layout_constraintStart_toStartOf="@id/square_guide"/>
+            app:layout_constraintStart_toStartOf="@id/square_guide"
+            tools:visibility="visible"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/progress_description_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/offset_small"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@id/loading_progress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:text="@string/loading_api"/>
+            tools:text="@string/loading_progress_book_pending"
+            tools:visibility="visible"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
