--- a/app/src/main/res/layout/fragment_beta_key.xml
+++ b/app/src/main/res/layout/fragment_beta_key.xml
@@ -71,6 +71,18 @@
 
         </ScrollView>
 
+        <androidx.core.widget.ContentLoadingProgressBar
+            android:id="@+id/beta_key_progress"
+            style="@android:style/Widget.ProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
