--- a/app/src/main/res/drawable/igist_primary_button_bg.xml
+++ b/app/src/main/res/drawable/igist_primary_button_bg.xml
@@ -6,6 +6,25 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:state_enabled="false">
+
+        <shape
+            android:shape="rectangle">
+
+            <corners
+                android:radius="@dimen/size_standard"/>
+
+            <solid
+                android:color="@color/colorPrimaryDisabled"/>
+
+            <stroke
+                android:width="2dp"
+                android:color="@color/colorPrimaryDarkDisabled"/>
+
+        </shape>
+
+    </item>
+
     <item android:state_pressed="true">
 
         <shape
